--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+
 body {
   margin: 0;
+  height: 100%;
+  padding-bottom: 6rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
